--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,13 @@
           <version>2.2</version>
       </dependency>
 
+      <dependency>
+          <groupId>net.jcip</groupId>
+          <artifactId>jcip-annotations</artifactId>
+          <version>1.0</version>
+      </dependency>
+
   </dependencies>
+
+
 </project>
