--- a/src/main/resources/runLog.properties
+++ b/src/main/resources/runLog.properties
@@ -1,3 +1,3 @@
 data.store.path = D:/admin/
 
-unit.test.value.fromfile = Test data from properties file not loaded
+unit.test.value.fromfile = Test data from properties file
