--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
         <junit.version>4.11</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <spock.version>1.0-groovy-2.4</spock.version>
-        <maven-surefire.version>2.18</maven-surefire.version>
+        <maven-surefire.version>2.20.1</maven-surefire.version>
+        <maven-compiler.version>3.7.0</maven-compiler.version>
+        <maven-javadoc.version>3.0.0-M1</maven-javadoc.version>
+
+        <test.exclude>nothing</test.exclude>
     </properties>
 
     <dependencies>
@@ -66,8 +70,28 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>testOne</id>
+            <properties>
+                <test.exclude>**/ringbufferprocessor/*java</test.exclude>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-verbose</arg>
+                        <arg>-Xlint:all,-options,-path</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -76,20 +100,20 @@
                     <includes>
                         <!-- By default only files ending in 'Test' will be included, so also include support for Spock style naming convention -->
                         <!-- Oddly enough for Groovy files, *Spec.groovy does not work, but *Spec.java does -->
-                        <include>**/*Test.java</include>
                         <include>**/*Spec.java</include>
                     </includes>
+                    <excludes>
+                        <exclude>${test.exclude}</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc.version}</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>-verbose</arg>
-                        <arg>-Xlint:all,-options,-path</arg>
-                    </compilerArgs>
+                    <show>public</show>
+                    <doctitle>The Crunchycorner lmax</doctitle>
                 </configuration>
             </plugin>
         </plugins>
